fix glossary term underline in dark mode

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -18,7 +18,7 @@
 .glossary-term {
   position: relative;
   cursor: pointer;
-  border-bottom: 1px dotted #000;
+  border-bottom: 1px dotted var(--minima-text-color);
 
   &:hover .glossary-popup {
     visibility: visible;
@@ -39,6 +39,9 @@
   padding: 10px;
   background: var(--minima-background-color);
   border: 1px solid #ccc;
+  @media (prefers-color-scheme: dark) {
+    border-color: #444;
+  }
   box-shadow: 0 0 10px rgba(0,0,0,0.1);
   z-index: 1000;
   white-space: normal;
@@ -47,12 +50,6 @@
 
   /* Force it to be the default font */
   font: 400 16px / 1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-}
-
-@media (prefers-color-scheme: dark) {
-  .glossary-popup {
-    border-color: #444;
-  }
 }
 
 
